#32 list data source (#34)
Implemented ListDataSource interface to be able to fetch data dynamically.